fix: resolve build warnings (#20)
* fix: resolve build warnings

* fix: preserve API compatibility in warning cleanup